ye/CCalParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CCalParser.java */
import java.io.*;
import java.util.*;
    public class CCalParser/*@bgen(jjtree)*/implements CCalParserTreeConstants, CCalParserConstants {/*@bgen(jjtree)*/
  protected static JJTCCalParserState jjtree = new JJTCCalParserState();public static SymbolTable symbolTable = new SymbolTable();
        public static String scope = "program";
        public static void main(String args[]) {
            CCalParser parser;
            if (args.length == 0) {

           System.out.println("Ccal Parser: Reading from standard input . . .");
            parser = new CCalParser(System.in);
            } else if (args.length == 1) {
                System.out.println("Ccal Parser: Reading from file " + args[0] + " . . .");
                try {
                    parser = new CCalParser(new java.io.FileInputStream(args[0]));
                } catch (java.io.FileNotFoundException e) {
                System.out.println("Ccal Parser: File " + args[0] + " not found.");
                return;
            }
            } else {
                System.out.println("Ccal Parser: Usage is one of:");
                System.out.println(" java CCalParser < inputfile");
                System.out.println("OR");
                System.out.println(" java CCalParser inputfile");
                return;

            }
            try {
                SimpleNode root = parser.program();

                System.out.println("Abstract Syntax Tree");
                System.out.println("--------------------------------------");
                root.dump("");
                System.out.println();
                System.out.println("Ccal Parser: Ccal program parsed successfully.");

                // Print Symbol Table

                System.out.println("SYMBOL TABLE");
                symbolTable.printSymbolTable();


            } catch (ParseException e) {
                System.out.println(e.getMessage());
                System.out.println("Ccal Parser: Encountered errors during parse.");
            }
        }

/**************************************************************************
* SECTION 4 - THE GRAMMAR & PRODUCTION RULES - WOULD NORMALLY START HERE *
**************************************************************************/
  static final public SimpleNode program() throws ParseException {
    trace_call("program");
    try {
                                 /*@bgen(jjtree) program */
  program jjtn000 = new program(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        decl_list();
        function_list();
        main();
        jj_consume_token(0);
                                             jjtree.closeNodeScope(jjtn000, true);
                                             jjtc000 = false;
                                            {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("program");
    }
  }

  static final public void decl_list() throws ParseException {
    trace_call("decl_list");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
      case CONSTANT:
        decl();
        jj_consume_token(SEMIC);
        decl_list();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } finally {
      trace_return("decl_list");
    }
  }

  static final public void decl() throws ParseException {
    trace_call("decl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
        var_decl();
        break;
      case CONSTANT:
        const_decl();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("decl");
    }
  }

  static final public void var_decl() throws ParseException {
    trace_call("var_decl");
    try {
                        /*@bgen(jjtree) Var */
                        Var jjtn000 = new Var(JJTVAR);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t; String id; String type;
      try {
        t = jj_consume_token(VARIABLE);
        id = ID();
        jj_consume_token(COLON);
        type = type();
                                                    jjtree.closeNodeScope(jjtn000, true);
                                                    jjtc000 = false;
                                                    jjtn000.value = t.image; symbolTable.put(id,type,"var",scope);
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("var_decl");
    }
  }

  static final public void const_decl() throws ParseException {
    trace_call("const_decl");
    try {
                            /*@bgen(jjtree) Const */
                            Const jjtn000 = new Const(JJTCONST);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t; String id; String type;
      try {
        t = jj_consume_token(CONSTANT);
        id = ID();
        jj_consume_token(COLON);
        type = type();
        jj_consume_token(ASSIGN);
        Expression();
                                                                          jjtree.closeNodeScope(jjtn000, true);
                                                                          jjtc000 = false;
                                                                         jjtn000.value = t.image;   symbolTable.put(id,type,"const",scope);
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("const_decl");
    }
  }

  static final public void function_list() throws ParseException {
    trace_call("function_list");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
      case BOOLEAN:
      case VOID:
        function();
        function_list();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } finally {
      trace_return("function_list");
    }
  }

  static final public void function() throws ParseException {
    trace_call("function");
    try {
                             /*@bgen(jjtree) Function */
                             Function jjtn000 = new Function(JJTFUNCTION);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t; String type; String id;
      try {
        type = type();
        id = ID();
        jj_consume_token(LBR);
        parameter_list();
        jj_consume_token(RBR);
                                                         symbolTable.put(id,type,"function",scope); scope=id;
        jj_consume_token(LBRACE);
        decl_list();
        statement_block();
        jj_consume_token(RETURN);
        jj_consume_token(LBR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case LBR:
        case MINUS_SIGN:
        case NUMBER:
        case ID:
          Expression();
          break;
        default:
          jj_la1[3] = jj_gen;

        }
        jj_consume_token(RBR);
        jj_consume_token(SEMIC);
        jj_consume_token(RBRACE);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("function");
    }
  }

  static final public String type() throws ParseException {
    trace_call("type");
    try {
                       /*@bgen(jjtree) Type */
                       Type jjtn000 = new Type(JJTTYPE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER:
          t = jj_consume_token(INTEGER);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                  jjtn000.value = t.image; {if (true) return t.image;}
          break;
        case BOOLEAN:
          t = jj_consume_token(BOOLEAN);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.value = t.image; {if (true) return t.image;}
          break;
        case VOID:
          t = jj_consume_token(VOID);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.value = t.image; {if (true) return t.image;}
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("type");
    }
  }

  static final public void parameter_list() throws ParseException {
    trace_call("parameter_list");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        nemp_parameter_list();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } finally {
      trace_return("parameter_list");
    }
  }

  static final public void nemp_parameter_list() throws ParseException {
    trace_call("nemp_parameter_list");
    try {
                                         /*@bgen(jjtree) #NemParL(true) */
                                         NemParL jjtn000 = new NemParL(JJTNEMPARL);
                                         boolean jjtc000 = true;
                                         jjtree.openNodeScope(jjtn000);Token t; String type; String id;
      try {
        id = ID();
        jj_consume_token(COLON);
        type = type();
        nemp_paramater_list_prime();
                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                 jjtc000 = false;
                                                                 symbolTable.put(id,type,"param",scope);
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("nemp_parameter_list");
    }
  }

  static final public void nemp_paramater_list_prime() throws ParseException {
    trace_call("nemp_paramater_list_prime");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        nemp_parameter_list();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } finally {
      trace_return("nemp_paramater_list_prime");
    }
  }

  static final public void main() throws ParseException {
    trace_call("main");
    try {
                     /*@bgen(jjtree) Main */
  Main jjtn000 = new Main(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
   scope = "main";
        jj_consume_token(MAIN);
        jj_consume_token(LBRACE);
        decl_list();
        statement_block();
        jj_consume_token(RBRACE);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("main");
    }
  }

  static final public void statement_block() throws ParseException {
    trace_call("statement_block");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case SKIPP:
      case LBRACE:
      case ID:
        statement();
        statement_block();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } finally {
      trace_return("statement_block");
    }
  }

  static final public void statement() throws ParseException {
    trace_call("statement");
    try {
                               /*@bgen(jjtree) Statement */
                               Statement jjtn000 = new Statement(JJTSTATEMENT);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          ID();
          statement_ID();
          break;
        case LBRACE:
          jj_consume_token(LBRACE);
          statement_block();
          jj_consume_token(RBRACE);
          break;
        case IF:
          t = jj_consume_token(IF);
          condition();
          jj_consume_token(LBRACE);
          statement_block();
          jj_consume_token(RBRACE);
          jj_consume_token(ELSE);
          jj_consume_token(LBRACE);
          statement_block();
          jj_consume_token(RBRACE);
                                                                                                           jjtree.closeNodeScope(jjtn000, true);
                                                                                                           jjtc000 = false;
                                                                                                          jjtn000.value = t.image;
          break;
        case WHILE:
          t = jj_consume_token(WHILE);
          condition();
          jj_consume_token(LBRACE);
          statement_block();
          jj_consume_token(RBRACE);
                                                                   jjtree.closeNodeScope(jjtn000, true);
                                                                   jjtc000 = false;
                                                                  jjtn000.value = t.image;
          break;
        case SKIPP:
          jj_consume_token(SKIPP);
          jj_consume_token(SEMIC);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("statement");
    }
  }

  static final public void statement_ID() throws ParseException {
    trace_call("statement_ID");
    try {
                       Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        t = jj_consume_token(ASSIGN);
        Expression();
        jj_consume_token(SEMIC);
                                       Assign jjtn001 = new Assign(JJTASSIGN);
                                       boolean jjtc001 = true;
                                       jjtree.openNodeScope(jjtn001);
        try {
                                       jjtree.closeNodeScope(jjtn001, true);
                                       jjtc001 = false;
                                      jjtn001.value = t.image;
        } finally {
                                       if (jjtc001) {
                                         jjtree.closeNodeScope(jjtn001, true);
                                       }
        }
        break;
      case LBR:
        t = jj_consume_token(LBR);
        arg_list();
        jj_consume_token(RBR);
                                  FuncAssign jjtn002 = new FuncAssign(JJTFUNCASSIGN);
                                  boolean jjtc002 = true;
                                  jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(SEMIC);
        } finally {
                                  if (jjtc002) {
                                    jjtree.closeNodeScope(jjtn002, true);
                                  }
        }
        break;
      default:
        jj_la1[9] = jj_gen;

      }
    } finally {
      trace_return("statement_ID");
    }
  }

  static final public void Expression() throws ParseException {
    trace_call("Expression");
    try {
      fragment();
      if (jj_2_1(2)) {
        binary_arith_op();
        fragment();
      } else {
        ;
      }
    } finally {
      trace_return("Expression");
    }
  }

  static final public void binary_arith_op() throws ParseException {
    trace_call("binary_arith_op");
    try {
                          Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS_SIGN:
        t = jj_consume_token(PLUS_SIGN);
                      Plus_op jjtn001 = new Plus_op(JJTPLUS_OP);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
        try {
                      jjtree.closeNodeScope(jjtn001, true);
                      jjtc001 = false;
                     jjtn001.value = t.image;
        } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001, true);
                      }
        }
        break;
      case MINUS_SIGN:
        t = jj_consume_token(MINUS_SIGN);
                         Minus_op jjtn002 = new Minus_op(JJTMINUS_OP);
                         boolean jjtc002 = true;
                         jjtree.openNodeScope(jjtn002);
        try {
                         jjtree.closeNodeScope(jjtn002, true);
                         jjtc002 = false;
                        jjtn002.value = t.image;
        } finally {
                         if (jjtc002) {
                           jjtree.closeNodeScope(jjtn002, true);
                         }
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("binary_arith_op");
    }
  }

  static final public void fragment() throws ParseException {
    trace_call("fragment");
    try {
                   Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
    FuncReturn jjtn001 = new FuncReturn(JJTFUNCRETURN);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
        try {
          t = jj_consume_token(ID);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBR:
            jj_consume_token(LBR);
            arg_list();
            jj_consume_token(RBR);
            break;
          default:
            jj_la1[11] = jj_gen;

          }
                                             jjtree.closeNodeScope(jjtn001, true);
                                             jjtc001 = false;
                                            jjtn001.value = t.image;
        } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
        } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
        }
        break;
      case MINUS_SIGN:
        t = jj_consume_token(MINUS_SIGN);
        ID();
                            Minus jjtn002 = new Minus(JJTMINUS);
                            boolean jjtc002 = true;
                            jjtree.openNodeScope(jjtn002);
        try {
                            jjtree.closeNodeScope(jjtn002, true);
                            jjtc002 = false;
                           jjtn002.value = t.image;
        } finally {
                            if (jjtc002) {
                              jjtree.closeNodeScope(jjtn002, true);
                            }
        }
        break;
      case NUMBER:
        t = jj_consume_token(NUMBER);
                   BoolOp jjtn003 = new BoolOp(JJTBOOLOP);
                   boolean jjtc003 = true;
                   jjtree.openNodeScope(jjtn003);
        try {
                   jjtree.closeNodeScope(jjtn003, true);
                   jjtc003 = false;
                  jjtn003.value = t.image;
        } finally {
                   if (jjtc003) {
                     jjtree.closeNodeScope(jjtn003, true);
                   }
        }
        break;
      case TRUE:
        t = jj_consume_token(TRUE);
                  BoolOp jjtn004 = new BoolOp(JJTBOOLOP);
                  boolean jjtc004 = true;
                  jjtree.openNodeScope(jjtn004);
        try {
                  jjtree.closeNodeScope(jjtn004, true);
                  jjtc004 = false;
                 jjtn004.value = t.image;
        } finally {
                  if (jjtc004) {
                    jjtree.closeNodeScope(jjtn004, true);
                  }
        }
        break;
      case FALSE:
        t = jj_consume_token(FALSE);
                   BoolOp jjtn005 = new BoolOp(JJTBOOLOP);
                   boolean jjtc005 = true;
                   jjtree.openNodeScope(jjtn005);
        try {
                   jjtree.closeNodeScope(jjtn005, true);
                   jjtc005 = false;
                  jjtn005.value = t.image;
        } finally {
                   if (jjtc005) {
                     jjtree.closeNodeScope(jjtn005, true);
                   }
        }
        break;
      case LBR:
        jj_consume_token(LBR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case LBR:
        case MINUS_SIGN:
        case NUMBER:
        case ID:
          Expression();
          break;
        default:
          jj_la1[12] = jj_gen;

        }
        jj_consume_token(RBR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBR:
          jj_consume_token(LBR);
          arg_list();
          jj_consume_token(RBR);
          break;
        default:
          jj_la1[13] = jj_gen;

        }
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("fragment");
    }
  }

//Remove Left Recursion  
  static final public void condition() throws ParseException {
    trace_call("condition");
    try {
                              /*@bgen(jjtree) Condition */
  Condition jjtn000 = new Condition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          jj_consume_token(NOT);
          condition();
          condition_prime();
          break;
        default:
          jj_la1[15] = jj_gen;
          if (jj_2_2(2)) {
            jj_consume_token(LBR);
            condition();
            jj_consume_token(RBR);
            condition_prime();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case TRUE:
            case FALSE:
            case LBR:
            case MINUS_SIGN:
            case NUMBER:
            case ID:
              Expression();
              comp_op();
              condition_prime();
              break;
            default:
              jj_la1[16] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("condition");
    }
  }

  static final public void condition_prime() throws ParseException {
    trace_call("condition_prime");
    try {
                          Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
        condition();
                            AndOp jjtn001 = new AndOp(JJTANDOP);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
        try {
                            jjtree.closeNodeScope(jjtn001, true);
                            jjtc001 = false;
                           jjtn001.value = t.image;
        } finally {
                            if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001, true);
                            }
        }
        break;
      case OR:
        t = jj_consume_token(OR);
        condition();
                             OrOp jjtn002 = new OrOp(JJTOROP);
                             boolean jjtc002 = true;
                             jjtree.openNodeScope(jjtn002);
        try {
                             jjtree.closeNodeScope(jjtn002, true);
                             jjtc002 = false;
                            jjtn002.value = t.image;
        } finally {
                             if (jjtc002) {
                               jjtree.closeNodeScope(jjtn002, true);
                             }
        }
        break;
      default:
        jj_la1[17] = jj_gen;

      }
    } finally {
      trace_return("condition_prime");
    }
  }

  static final public void comp_op() throws ParseException {
    trace_call("comp_op");
    try {
                        /*@bgen(jjtree) Comp */
                        Comp jjtn000 = new Comp(JJTCOMP);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQUALS:
          t = jj_consume_token(EQUALS);
          Expression();
                               Equals jjtn001 = new Equals(JJTEQUALS);
                               boolean jjtc001 = true;
                               jjtree.openNodeScope(jjtn001);
          try {
                               jjtree.closeNodeScope(jjtn001, true);
                               jjtc001 = false;
